2006-06-07  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/display/gimpdisplayshell.c (gimp_display_shell_expose_guide):
	fix typo, s/get_position/get_orientation/.

2006-06-07  Sven Neumann  <sven@gimp.org>

	* app/core/gimpguide.c: removed unused includes and property blurbs;
	fixed registration of the "id" property, it is not a GIMP_CONFIG
	property.

2006-06-07  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpguide.[ch]: added gimp_guide_get_ID().

	* app/core/gimpimage-crop.c
	* app/core/gimpimage-duplicate.c
	* app/core/gimpimage-flip.c
	* app/core/gimpimage-guides.c
	* app/core/gimpimage-resize.c
	* app/core/gimpimage-rotate.c
	* app/core/gimpimage-scale.c
	* app/core/gimpimage-snap.c
	* app/core/gimpimage-undo-push.c
	* app/display/gimpdisplayshell-draw.c
	* app/display/gimpdisplayshell.c
	* app/tools/gimpmovetool.c
	* app/xcf/xcf-save.c
	* tools/pdbgen/pdb/guides.pdb: use accessors instead of accessing
	GimpGuide's struct members directly.

	* app/pdb/guides_cmds.c: regenerated.

2006-06-07  Sven Neumann  <sven@gimp.org>

	* app/actions/error-console-actions.c: 
	* app/actions/error-console-commands.[ch]
	* app/widgets/gimphelp-ids.h
	* menus/error-console-menu.xml: added "select-all" action as
	suggested in bug #328838.

2006-06-07  Sven Neumann  <sven@gimp.org>

	* app/core/gimpguide.[ch]: added a setter for "orientation".

	* app/core/gimpimage-resize.c (gimp_image_resize_with_layers):
	removed unused variable; use for() loops to iterate over guides
	and sample points.

2006-06-07  Sven Neumann  <sven@gimp.org>

	* app/core/gimpguide.[ch]: derive from GObject, we don't need any
	GimpObject functionality here.  Declare "orientation" and "id"
	properties CONSTRUCT_ONLY, added a gimp_guide_new() function and
	emit notify on position changes.

	* app/core/gimpimage-guides.c: use gimp_guide_new() to instantiate
	guides.

	* app/core/gimpimage.c (gimp_image_get_memsize): formatting.

2006-06-07  Michael Natterer  <mitch@gimp.org>
