@@ -1,3 +1,8 @@
+2006-06-07  Sven Neumann  <sven@gimp.org>
+
+	* app/tools/gimpnewrectselecttool.c: removed extra semicolon to
+	fix build on Solaris (bug #344203).
+
 2006-06-07  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
 
 	* app/display/gimpdisplayshell.c (gimp_display_shell_expose_guide):
